<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">YiDa</string>
    <string name="login">登录</string>
    <string name="login_desc">注册易达账号表示你同意</string>
    <string name="login_deal">最终用户协议</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="cet_phone_str">填写中国大陆手机号</string>
    <string name="verify_str">手机验证码</string>
    <string name="btn_verify_str">获取验证码</string>
    <string name="btn_next_str">下一步</string>
    <string name="main_title">易达停车</string>
    <string name="contact_num">请填写亲友手机号码</string>
    <string name="contact_str">...</string>
    <string name="grant_str">授权</string>
    <string name="norpwd_str">两次输入的密码不一致</string>
    <string name="pwdlen_str">安全起见，设置的密码至少设置6位</string>
    <string name="rightphone_str">请填写正确的手机号码</string>
    <string name="pwdsafe_str">安全起见，密码必须是英文字母和数字组合</string>
    <string name="operation_str">操作台</string>
    <string name="invite_str">邀请亲友</string>
    <string name="center_str">个人中心</string>
    <string name="position_str">我的车位</string>
</resources>
