<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <Button
        android:id="@+id/btnOperation"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:text="@string/operation_str" />

    <Button
        android:id="@+id/btnInvite"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:text="@string/invite_str" />

    <Button
        android:id="@+id/btnCenter"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:text="@string/center_str" />

</LinearLayout>